--- a/src/component/HeroPage2.css
+++ b/src/component/HeroPage2.css
@@ -131,3 +131,19 @@
     margin-bottom: 300px;
   }
 }
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.hero-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer {
+  margin-top: auto;
+}
