--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -1,13 +1,12 @@
 .footer-container{
     width: 100%;
     padding-bottom: 16px;
+    padding-top: 16px;
     justify-content: center;
     text-transform: uppercase;
     color: white;
     gap: 16px;
-    padding-top: 16px;
-    position: absolute;
-    background: rgba(255, 255, 255, 0.01);
+    background: transparent;
     border-radius: 24px;
     backdrop-filter: blur(5px);
     display: flex;
@@ -16,6 +15,7 @@
     flex-wrap: wrap;
     z-index: 1000;
     margin-left: auto;
+    
 }
 .footer-links{
     color: white;
