--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -63,13 +63,14 @@
   text-align: center;
   display: flex;          
   justify-content: center; 
+  text-decoration: none;
 }
 
 .nav-link:hover::after {
   content: '';
   display: block;
   height: 2px;
-  width: 50px;
+  width: 100%;
   background: linear-gradient(90deg, #E87510, #389641);
   position: absolute;
   bottom: 0;
@@ -93,6 +94,14 @@
   margin-left: auto; 
   margin-right: 100px;
   position: relative;
+}
+.app-button-text{
+  color: #1F1E1E;
+  text-decoration: none;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.4px;
 }
 
 @media (max-width: 768px) {
@@ -124,6 +133,7 @@
   }
   
   .nav-link {
+    text-decoration: none;
     width: 100%;
     padding: 12px 0;
     text-align: center;
