--- a/src/component/Tree.css
+++ b/src/component/Tree.css
@@ -28,17 +28,25 @@
     transform: translate(-50%, -50%); 
     z-index: 1; 
 }
-.tree-container{}
+.tree-container{
+    width: auto;
+}
 
 @media (max-width: 768px) {
     .logo-image {
-        display: none;
+      display: none;
     }
+  
     .tree-image {
-        background-image: url('./images/mobile_background.webp');
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 440px;
-        height: 100%; 
+      background-image: url('./images/mobile_background.webp');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      width: 100vw;
+      height: 1000px;
+      position: relative;
+      top: 0;
+      left: 0;
+      z-index: 1;
     }
-}
+  }
