--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Inter', sans-serif; 
 }
-
+ body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
