--- a/src/component/HeroPage2.css
+++ b/src/component/HeroPage2.css
@@ -2,7 +2,15 @@
 .hero-content{
     margin-top: 170px;
 }
-
+.main{
+  background: linear-gradient(to right, #E87510, #389641),url('./images/betterbank.webp') no-repeat;
+  font-family: 'Inter', sans-serif; 
+  background-size: cover;
+  background-position: center;
+  width: auto;
+  height: 100%;
+  scroll-behavior: smooth;
+}
   .gradient-overlay {
     position: absolute;
     top: 0;
@@ -123,8 +131,13 @@
 
 @media (max-width: 767px) {
   .main{
-      background: url('./images/betterbank.webp') no-repeat;
-    width: 100%;
+    background: linear-gradient( to bottom, #171717bd, #00000070),url('./images/background_wildlands_mobile.png') no-repeat;
+    font-family: 'Inter', sans-serif; 
+    background-size: cover;
+    background-position: center;
+    width: auto;
+    height: 100%;
+    scroll-behavior: smooth;
   }
 
   .hero-stats-value {
@@ -150,13 +163,4 @@
 
 .footer {
   margin-top: auto;
-}
-.main{
-  background: url('./images/betterbank.webp') no-repeat;
-  font-family: 'Inter', sans-serif; 
-  background-size: cover;
-  background-position: center;
-  width: auto;
-  height: 100%;
-  scroll-behavior: smooth;
 }
