--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -3,7 +3,7 @@
   width: 100%;
   padding-bottom: 16px;
   padding-top: 16px;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   background: rgba(255, 255, 255, 0.01);
